Revision history for mojo-down-monitor

0.08 2012/01/19

0.07 2012/01/18
  - Fixed a bug that very slow sites have caused malfunction on cron schedule.
  - Fixed a bug on deleteing sites.
  - Fixed that connect timeout starts to mean inactivity timeout.
  - Bundled MojoX::Tusu v0.32

0.06 2012/01/07
  - Fixed a bug on sending mail for error resolving report.
  - Reduced memory leak.
  - Improved documentation.

0.05 2012/01/06
  - Added connection test button on site form.
  - Added user agent option on site form.
  - Added connection timeout option on site form.
  - Added response time on log.
  - Fixed charactor corruption on log message.
  - Improved pjax response architecture.

0.04 2012/01/05
  - Added Max log option on site edit
  - Added hypnotoad.conf

0.03 2012/01/01
  - Fixed a bug on vacuuming log.

0.02 2012/01/01
  - Changed max_log to be act as per site limitation.
  - Made log descent order.
  - Renamed script.
  - Improved document a little.

0.01 2011/12/31
  - initial release